--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
     <html>
+        <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="style.css">
         <header>
             <title>My Website</title>
         </header>
