--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
     <html>
-        <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="style.css">
+    <style>
+        .p1 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+    </style>        
         <header>
             <title>My Website</title>
         </header>
