--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </header>
         <body>
             <h1>This is my first website</h1>
-            <p>Hello World!</p>
+            <p class="p1">Hello World!</p>
         </body>
 
     </html>
