--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <body>
             <h1>This is my first website</h1>
             <p class="p1">Hello World!</p>
+            <a href="/fonts/fonts.html">Fonts test</a>
         </body>
 
     </html>
