--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
     <html>
     <style>
         .p1 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:'Bungee Spice', cursive;
 }
+
+    @import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap');
     </style>        
         <header>
             <title>My Website</title>
