--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         </header>
         <body>
             <h1>This is my first website</h1>
-            <p class="p1">Hello World!</p>
+            <p class="p1"><span style="color: #FF7A59">Hello World!</span></p>
         </body>
     </html>
