--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <style>
         .p1 {
   font-family:'Bungee Spice', cursive;
+  color:'#FF7A59'
 }
 
     @import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap');
@@ -12,6 +13,6 @@
         </header>
         <body>
             <h1>This is my first website</h1>
-            <p class="p1"><span style="color: #FF7A59">Hello World!</span></p>
+            <p class="p1">Hello World!</p>
         </body>
     </html>
