--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <style>
         .p1 {
   font-family:'Bungee Spice', cursive;
-  color:'#FF7A59'
+  color:#FF7A59;
 }
 
     @import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap');
