--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
     <html>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <style>
         .p1 {
   font-family:'Bungee Spice', cursive;
@@ -14,5 +15,10 @@
         <body>
             <h1>This is my first website</h1>
             <p class="p1">Hello World!</p>
+            <form action="https://www.google.com/search" class="searchform" method="get" name="searchform" target="_blank">
+                <input name="sitesearch" type="hidden">
+                <input autocomplete="on" class="form-control search" name="q" placeholder="Search Google" required="required"  type="text">
+                <button class="button" type="submit"><span class="material-symbols-outlined">search</span></button>
+            </form>
         </body>
     </html>
