--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   color:#FF7A59;
 }
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: red;
+  color: #0000FF;
   opacity: 1; /* Firefox */
 }
 
