--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <style>
         .p1 {
-  font-family:'Bungee Spice', cursive;
-  color:#FF7A59;
+         font-family:'Bungee Spice', cursive;
+        color:#FF7A59;
 }
         ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
         color: #0000FF;
@@ -19,7 +19,7 @@
         <body>
             <h1>This is my first website</h1>
             <p class="p1">Hello World!</p>
-            <a href="youtu.be">Youtube
+            <a href="https://www.youtu.be">Youtube</a>
             </a>
             <form action="https://www.google.com/search" class="searchform" method="get" name="searchform" target="_blank">
                 <input name="sitesearch" type="hidden">
