--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         color: #0000FF;
         opacity: 1; /* Firefox */
 }
+        .link {
+        color:red
+}         
 
     @import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap');
     </style>        
@@ -19,7 +22,7 @@
         <body>
             <h1>This is my first website</h1>
             <p class="p1">Hello World!</p>
-            <a href="https://www.youtu.be">Youtube</a>
+            <a class="link" href="https://www.youtu.be">Youtube</a>
             </a>
             <form action="https://www.google.com/search" class="searchform" method="get" name="searchform" target="_blank">
                 <input name="sitesearch" type="hidden">
