--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <body>
             <h1>This is my first website</h1>
             <p class="p1">Hello World!</p>
-            <a class="link" href="https://www.youtu.be">Youtube</a>
+            <a class="link" href="https://www.youtube.co.uk"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.youtube.com%2Fhowyoutubeworks%2Fpolicies%2Fcommunity-guidelines%2F&psig=AOvVaw0KLAiL2FZbC2AZmk2ONZEh&ust=1664387856120000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCJCKk4vGtfoCFQAAAAAdAAAAABAI"></a>
             </a>
             <form action="https://www.google.com/search" class="searchform" method="get" name="searchform" target="_blank">
                 <input name="sitesearch" type="hidden">
