--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 }         
         .title {
         font-family:'Roboto', sans-serif;
+        text-decoration:underline;
 }
     </style>        
         <header>
