--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - A Pen by ItsCoolGAMER959</title>
+  <title>Calculator</title>
   <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700">
