--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Home Page</title>
+  <title>Home Page</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -13,11 +13,11 @@
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   </head>
   <body>
-    <h2 class="h2">Code Pen<h2><br>
+    <h2 class="h2">My Website<h2><br>
     <button><span class="material-symbols-outlined">
 account_circle
 </span></button><br><br>
-    <button><span class="material-symbols-outlined">add</span></button><br><br>
+    <button onclick="window.location.href='/Calc/calculator.html';"><span class="material-symbols-outlined">calculate</span></button><br><br>
     <button><span class="material-symbols-outlined">bolt</span></button
    </body>
 </html>
