--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button><span class="material-symbols-outlined">
 account_circle
 </span></button><br><br>
-    <button onclick="window.location.href='/Calc/calculator.html';"><span class="material-symbols-outlined">calculate</span></button><br><br>
+    <button onclick="window.location.href='/Website/Calc/calculator.html';"><span class="material-symbols-outlined">calculate</span></button><br><br>
     <button><span class="material-symbols-outlined">bolt</span></button
    </body>
 </html>
